--- a/HTMLCSSBASICS/Styles/nav.css
+++ b/HTMLCSSBASICS/Styles/nav.css
@@ -1,15 +1,10 @@
-/*Common Styles*/
-body{
-  margin: 0px;
-  font-family: 'Roboto', sans-serif;
-
-}
-
 /*Common nav styles*/
 .navigation-wrapper {
   height: 190px;
   background-color: #11122b;
   color: #cbcbcb;
+  font-family: 'Roboto', sans-serif;
+
 
   /*Flexbox Container*/
   display: flex;
@@ -28,7 +23,7 @@ body{
   margin-right: 15px;
 }
 
-.navigation-wrapper > .left-column > .icon i {
+.navigation-wrapper > .left-column > .icon {
   font-size: 2em;
 }
 
@@ -37,10 +32,10 @@ body{
   grid-template-columns: 1fr;
   grid-gap: 10px;
 }
-
-.navigation-wrapper > .contact-hours-wrapper > .phone {
-  font-family: 'Ubuntu Condensed', sans-serif;
-
+.navigation-wrapper > .left-column > .contact-hours-wrapper > .hours {
+   font-family: 'Ubuntu Condensed', sans-serif;
+   color:#858585;
+   font-size: 0.8em;
 
 }
 
@@ -50,7 +45,6 @@ body{
 
 }
 
-  }
 
   .navigation-wrapper > .center-column {
     display: grid;
@@ -99,7 +93,42 @@ body{
 
 /* Right Column Styles*/
 
+.navigation-wrapper > .right-column {
+  display: flex;
+  align-items: center;
+}
+
 .navigation-wrapper > .right-column > .address-wrapper {
-  font-family: 'Ubuntu Condensed', sans-serif;
- display: flex;
- align-items: center;
+ font-family: 'Ubuntu Condensed', sans-serif;
+ text-align: right;
+}
+
+.navigation-wrapper > .right-column > .contact-icon {
+  margin-left: 15px;
+  font-size: 2em;
+
+}
+
+.navigation-wrapper > .right-column > .address-wrapper a {
+  color: #858585;
+  text-decoration: none;
+  font-size: 0.9em;
+  transition: 0.5s;
+
+}
+
+.navigation-wrapper > .right-column > .address-wrapper a:hover {
+  color: #cea135;
+  
+ 
+}
+
+.navigation-wrapper > .right-column > .contact-icon a {
+  color: #cbcbcb;
+  transition: 0.5s;
+
+}
+
+.navigation-wrapper > .right-column > .contact-icon a:hover {
+  color: #cea135;
+}
