--- a/HTMLCSSBASICS/Styles/contact.css
+++ b/HTMLCSSBASICS/Styles/contact.css
@@ -12,8 +12,15 @@
 }
 
 .company-metadata-sidebar-wrapper > .company-details-wrapper {
-	font-family: "Unbuntu Condensed", sans-serif;
+	font-family: 'Ubuntu Condensed', sans-serif;	
 	font-weight: 900;
 	display: flex;
 	justify-content: space-between;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	text-align: right;
+	font-size: 1.25em;
+	align-items: center;
 }
+
+
