--- a/HTMLCSSBASICS/Styles/homepage.css
+++ b/HTMLCSSBASICS/Styles/homepage.css
@@ -1,7 +1,7 @@
 /* Styles for the hero section */
 
 .hero-section{
-  background-image: url(../images/background/gourmet.jpeg);
+  background-image: url(../images/squares/pizza2.jpeg);
   padding:100px;
   height:300px;
   background-attachment: fixed;
